medium screen spacing issues

--- a/css/chicago24.css
+++ b/css/chicago24.css
@@ -1,4 +1,4 @@
-/* BASE */
+ BASE */
 
 ul {
 	list-style-type: none;
@@ -19,7 +19,6 @@ html, body {
 }
 
 /* BLOCKS */
-
 .introduction, .document--schedule, .document--plan-your-day, .document--tour-packages {
 	background-color: #fff;
 	background-color: hsla(0, 100%, 100%, .9);
@@ -118,6 +117,7 @@ html, body {
 	box-shadow: 0 0 0 #999;
 }
 
+/* BACKGROUNDS */
 html .home {
   background: url(../img/eg-pilsen.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
@@ -126,6 +126,30 @@ html .home {
   background-size: cover;
 }
 
+html .document--tour-schedule {
+  background: url(../img/eg-chinatown.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+html .document--plan {
+  background: url(../img/eg-downtown.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+html .document--packages {
+  background: url(../img/eg-downtown.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+/* HOME */
 .introduction {
 	margin-top: 3rem;
 }
@@ -144,33 +168,8 @@ html .home {
 	padding: 0 5rem 1rem 5rem;
 }
 
+
 /* TOUR SCHEDULE */
-html .document--tour-schedule {
-  background: url(../img/eg-chinatown.jpg) no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
-
-/* PLAN YOUR DAY */
-html .document--plan {
-  background: url(../img/eg-downtown.jpg) no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
-
-/* TOUR PACKAGES */
-html .document--packages {
-  background: url(../img/eg-downtown.jpg) no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
-
 .schedule__date, .plan-your-day__title, .package__title {
 	background-color: #505050;
 	background-color: hsla(0, 0%, 30%, .9);
@@ -200,15 +199,15 @@ html .document--packages {
 	text-transform: uppercase;
 }
 
+.tours {
+	list-style: none;
+}
+
 .tour__icon--walk {
 	border: 3px solid #0077c0;
 	border-radius: 50px;
 	padding: .3rem;
-	width: 22%;
-}
-
-.has-tip, .has-tip:hover {
-	border-bottom: none;
+	width: 15%;
 }
 
 .schedule__time, .plan-your-day__address, .plan-your-day__membership, .plan-your-day__parking, .plan-your-day__accessibility, .plan-your-day__contact, .plan-your-day__refund, .plan-your-day__weather, .plan-your-day__tour-info, .package__tour {
@@ -236,15 +235,6 @@ html .document--packages {
 	padding-top: .75rem;
 }
 
-/*.tours > li:nth-child(even) {
-	background-color: LightSkyBlue;
-	background-color: hsla(203, 92%, 75%, .25);
-}
-
-.tours > li:nth-child(odd) {
-	background-color: LightSkyBlue;
-	background-color: hsla(203, 92%, 75%, .65);
-}*/
 
 .tour, .museum-info {
 	border-bottom: 2px dotted hsla(0, 0%, 75%, 1);
@@ -285,10 +275,6 @@ html .document--packages {
 	margin-bottom: 0;
 }
 
-.tour__description__read-more {
-	/*display: inline;*/
-}
-
 .tour__description__meeting-location, .tour__description__cost {
 	font-size: 1.1rem;
 	font-weight: 600;
@@ -312,11 +298,6 @@ html .document--packages {
 	font-size: 1em;
 }
 
-/*.tour-package__button--tickets {
-	margin-top: 1rem;
-	text-align: right;
-}*/
-
 .tour-packages--intro {
 	margin-top: 3rem;
 	font-style: italic;
@@ -332,13 +313,10 @@ html .document--packages {
 }
 
 
+
 /* FOUNDATION OVERRIDES */
 [class*="block-grid-"] > li {
 	padding: 0;
-}
-
-.button {
-	margin-bottom: 0;
 }
 
 .alert-box {
@@ -359,6 +337,16 @@ html .document--packages {
 	font-size: 1rem;
 	font-style: italic;
 }
+
+.button {
+	margin-bottom: 0;
+}
+
+.has-tip, .has-tip:hover {
+	border-bottom: none;
+}
+
+
 
 /*// Small screens*/
 @media only screen {
@@ -415,10 +403,6 @@ html .document--packages {
 	.introduction__footer--copyright {
 		font-size: .5em;
 	}
-
-/*	footer.introduction__footer {
-		padding-bottom: 5em;
-	}*/
 
 	.navigation--main {
 		margin-top: 2rem;
@@ -528,6 +512,15 @@ html .document--packages {
 		width: 100%;
 	}
 
+	.tour__icon {
+		width: 50%;
+	}
+
+	.tour__description__read-more {
+		margin-bottom: 2em;
+	}
+
+
 } /* min-width 641px and max-width 1024px, use when QAing tablet-only issues */
 
 /*// Large screens*/
@@ -561,4 +554,4 @@ html .document--packages {
 /*	.hide--large {
 		display: none;
 	}*/
-} /* min-width 1921px, xlarge screens */
+} /* min-width 1921px, xlarge screens 
